Git Tests/force-app/main/default/default/objects/CondicaoPagamento__c/CondicaoPagamento__c.object-meta.xml
<CustomObject>
    <label>Condição de pagamento</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condições de pagamento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>