Git Tests/force-app/main/default/default/objects/CondicaoPagamento__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Descrição da condição de pagamento.</description>
    <label>Descrição</label>
    <length>14</length>
    <type>Text</type>
</CustomField>