Git Tests/force-app/main/default/default/objects/CondicaoPagamento__c/fields/TipoCondicaoPagamento__c.field-meta.xml
<CustomField>
    <fullName>TipoCondicaoPagamento__c</fullName>
    <description>Tipo da condição de pagamento (boleto, cartão, etc)</description>
    <label>Tipo da condição de pagamento</label>
    <length>6</length>
    <type>Text</type>
</CustomField>